<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_pic1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/developer_name"
                    android:textColor="@color/txtPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-60dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/developer_pic"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/grey_60" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sans_serif_narrow_bold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/txtSecondary"
                    android:textSize="40sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Version 1.0"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/about_description"
                    android:textColor="@color/txtSecondary"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:id="@+id/rel"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/link_insta"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/insta_icon"
                        tools:ignore="ContentDescription" />

                    <ImageButton
                        android:id="@+id/link_fb"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:drawableStart="@drawable/logo"
                        android:src="@drawable/fb_icon"
                        tools:ignore="ContentDescription" />

                    <ImageButton
                        android:id="@+id/link_Linkedin"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/linkedin_icon"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/grey_20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="30dp"
                        android:src="@drawable/google_icon"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/support_name"
                            android:textColor="@color/txtSecondary"
                            android:textSize="22sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/support_description"
                            android:textColor="@color/txtSecondary" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>